[package]
name = "mines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
wasm-bindgen = "0.2.84"

[lib]
crate-type = ["cdylib", "rlib"]